# LyricTime

./: .gitattributes  .gitignore  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: download.rs  ffmpeg_downloader.rs  lib.rs  main.rs  model_downloader.rs
src-tauri/src/whisper/: formats.rs  linebreak.rs  mod copy.rs  mod.rs  parse.rs  process.rs
