[package]
name = "lyric-line-sync"
version = "0.1.0"
description = "Offline line-timed lyric generator"
authors = ["you"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
