[package]
name = "lyric-line-sync"
version = "0.1.0"
description = "Offline line-timed lyric generator"
authors = ["you"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
